# check_the_docs

./: .gitignore  .mcp.json  README.md  example.md  pyproject.toml  server.py
.continue/mcpServers/: check-the-docs.yaml
.github/workflows/: test.yml
docs/: advanced-features.md  available_tools.md  chroma-cloud-setup.md  getting-started.md  git-integration.md  setup-mcp.md
tests/: conftest.py  test_chroma_manager.py  test_document_processor.py  test_mcp_tools.py
